Pintando la tabla el cual usuario tiene permiso

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,3 +3,10 @@ $secondary: #c3d600;
 $light: #eaeaea;
 $white: white;
 $black: #636c72;
+
+$background-dark: #C3D9FF;
+$background-light: #E8EEF7;
+$background-super-dark: #2A5DB0;
+
+$text-dark: black;
+$text-light: white;
