--- a/src/components/Root/MaestrosMatrix/DinamicRelation/DinamicRelation.scss
+++ b/src/components/Root/MaestrosMatrix/DinamicRelation/DinamicRelation.scss
@@ -1,1 +1,9 @@
 @import "../../../../scss/index.scss";
+
+.error{
+    input{
+        background: #fff6f6 !important;
+        border-color: #e0b4b4 !important;
+        color: #9f3a38 !important;
+    }
+}
