implementacion de las grid en la pantalla de inicio

--- a/src/components/TableBasic/TableBasic.scss
+++ b/src/components/TableBasic/TableBasic.scss
@@ -18,3 +18,7 @@
         }
     }
 }
+
+.ui.divided.grid:not([class*="vertically divided"])>.column:not(.row), .ui.divided.grid:not([class*="vertically divided"])>.row>.column {
+    box-shadow: none;
+}
