se añadio paginacion de 15 filas, y se añadieron estilos para acomodarlo a la pantalla

--- a/src/components/TableBasic/TableBasic.scss
+++ b/src/components/TableBasic/TableBasic.scss
@@ -19,6 +19,7 @@
     }
 }
 
-.ui.divided.grid:not([class*="vertically divided"])>.column:not(.row), .ui.divided.grid:not([class*="vertically divided"])>.row>.column {
-    box-shadow: none;
+.ui.grid>* {
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
