--- a/src/pages/Root/MaestrosMatrix/MaestrosMatrixDetalle/MaestrosMatrixDetalle.scss
+++ b/src/pages/Root/MaestrosMatrix/MaestrosMatrixDetalle/MaestrosMatrixDetalle.scss
@@ -3,3 +3,15 @@
 .maestros-matrix-detalle{
     margin-top: 30px;
 }
+
+.mb-3{
+    margin-bottom: 10px !important;
+}
+
+.color-danger {
+    color: #dc3545!important;
+}
+
+.p-0 {
+    padding: 0 !important;
+}
