--- a/src/components/SuperTable/SuperTable.scss
+++ b/src/components/SuperTable/SuperTable.scss
@@ -2,7 +2,17 @@
 
 .super-table{
     .p-datatable .p-datatable-tbody > tr > td{
-        border: 1px solid black !important;
+        border-right-style: solid;
+        border-right-width: 1px;
+        border-right-color: gray;
+        font-weight: bold;
+    }
+
+    .p-datatable.p-datatable-gridlines .p-datatable-thead > tr > th {
+        border-right-style: solid;
+        border-right-width: 1px !important;
+        border-right-color: gray;
+        font-weight: bold;
     }
 
     padding-bottom: 50px;
